--- a/naat/pyproject.toml
+++ b/naat/pyproject.toml
@@ -25,6 +25,9 @@ rake-nltk = "^1.0.6"
 gcld3 = "^3.0.13"
 pytesseract = "^0.3.10"
 pdf2image = "^1.16.2"
+transformers = "^4.26.1"
+torch = "^1.13.1"
+google-api-python-client = "^2.80.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
