--- a/naat/pyproject.toml
+++ b/naat/pyproject.toml
@@ -12,6 +12,10 @@ keywords = ["mykeyword", "mykeyword", "mykeyword"]
 include = [
     "LICENSE",
 ]
+packages = [
+    { include = "naat_core" },
+    { include = "naat_data" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
@@ -28,6 +32,9 @@ pdf2image = "^1.16.2"
 transformers = "^4.26.1"
 torch = "^1.13.1"
 google-api-python-client = "^2.80.0"
+pdfminer-six = "^20221105"
+pdf2docx = "^0.5.6"
+tika = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
