--- a/webstat_tsclustering/pyproject.toml
+++ b/webstat_tsclustering/pyproject.toml
@@ -14,8 +14,11 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
-pandas = "^2.0.0"
+python = ">=3.8,<3.11"
+pandas = "1.5.3"
+matplotlib = "^3.7.1"
+tslearn = "0.5.2"
+numpy = "1.21.5"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
