--- a/coding_test/pyproject.toml
+++ b/coding_test/pyproject.toml
@@ -16,6 +16,8 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 pandas = "^2.0.1"
+scikit-learn = "^1.2.2"
+statsmodels = "^0.13.5"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
