--- a/coding_test/pyproject.toml
+++ b/coding_test/pyproject.toml
@@ -18,6 +18,8 @@ python = ">=3.8,<3.12"
 pandas = "^2.0.1"
 scikit-learn = "^1.2.2"
 statsmodels = "^0.13.5"
+xgboost = "^1.7.5"
+seaborn = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
