--- a/pdf_content_extractor/pyproject.toml
+++ b/pdf_content_extractor/pyproject.toml
@@ -21,8 +21,8 @@ pypdf = "^3.4.1"
 pdfminer-six = "^20221105"
 pdf2docx = "^0.5.6"
 tika = "^2.6.0"
-# pdf2image = "^1.16.2"
-# pytesseract = "^0.3.10"
+pdf2image = "^1.16.2"
+pytesseract = "^0.3.10"
 # validator-collection = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
