--- a/corpus_preparation/pyproject.toml
+++ b/corpus_preparation/pyproject.toml
@@ -17,8 +17,9 @@ include = [
 python = ">=3.8,<3.12"
 pandas = "^2.0.1"
 ebooklib = "^0.18"
-# validator-collection = "^1.5.0"
+tornado = "6.3.1"
 nltk = "^3.8.1"
+# validator-collection = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
