--- a/geo-analysis/pyproject.toml
+++ b/geo-analysis/pyproject.toml
@@ -20,6 +20,7 @@ matplotlib = "^3.7.1"
 geojson = "^3.0.1"
 scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
+seaborn = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
