--- a/geo-analysis/pyproject.toml
+++ b/geo-analysis/pyproject.toml
@@ -21,6 +21,7 @@ geojson = "^3.0.1"
 scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
 seaborn = "^0.12.2"
+geopandas = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
