--- a/webstat-tsclustering/pyproject.toml
+++ b/webstat-tsclustering/pyproject.toml
@@ -19,6 +19,9 @@ pandas = "1.5.3"
 matplotlib = "^3.7.1"
 tslearn = "0.5.2"
 numpy = "1.21.5"
+tabulate = "^0.9.0"
+networkx = "^3.1"
+bokeh = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
