--- a/webstat-tsclustering/pyproject.toml
+++ b/webstat-tsclustering/pyproject.toml
@@ -22,6 +22,7 @@ numpy = "1.21.5"
 tabulate = "^0.9.0"
 networkx = "^3.1"
 bokeh = "^3.1.1"
+ydata-profiling = "^4.3.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
