--- a/naat/pyproject.toml
+++ b/naat/pyproject.toml
@@ -18,7 +18,13 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.9,<3.12"
+pandas = "^2.0.3"
+networkx = "^3.1"
+matplotlib = "^3.7.2"
+bokeh = "^3.2.2"
+pygraphviz = "^1.11"
+
 # python-dotenv = "^0.21.1"
 # pip = "^23.0"
 # dstb = { git = "https://ClementBM@github.com/ClementBM/datascience-toolbox", branch = "main" }
@@ -35,7 +41,7 @@ python = ">=3.8,<3.12"
 # torch = "^1.13.1"
 # google-api-python-client = "^2.80.0"
 # rake-nltk = "^1.0.6"
-pandas = "^2.0.3"
+tabulate = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
