--- a/webstat-tsclustering/pyproject.toml
+++ b/webstat-tsclustering/pyproject.toml
@@ -23,6 +23,7 @@ tabulate = "^0.9.0"
 networkx = "^3.1"
 bokeh = "^3.1.1"
 ydata-profiling = "^4.3.1"
+ray = "^2.6.3"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
