--- a/finetune-llm/pyproject.toml
+++ b/finetune-llm/pyproject.toml
@@ -23,6 +23,7 @@ peft = "^0.5.0"
 bitsandbytes = "^0.41.1"
 accelerate = "^0.22.0"
 scipy = "^1.11.2"
+nvidia-ml-py3 = "^7.352.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
