--- a/finetune-llm/pyproject.toml
+++ b/finetune-llm/pyproject.toml
@@ -24,6 +24,12 @@ bitsandbytes = "^0.41.1"
 accelerate = "^0.22.0"
 scipy = "^1.11.2"
 nvidia-ml-py3 = "^7.352.0"
+ctransformers = {extras = ["cuda"], version = "^0.2.27"}
+tabulate = "^0.9.0"
+langchain = "^0.0.304"
+optimum = "^1.13.2"
+auto-gptq = "^0.4.2"
+llama-cpp-python = "^0.2.7"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
