--- a/naat/pyproject.toml
+++ b/naat/pyproject.toml
@@ -42,6 +42,9 @@ pygraphviz = "^1.11"
 # google-api-python-client = "^2.80.0"
 # rake-nltk = "^1.0.6"
 tabulate = "^0.9.0"
+seaborn = "^0.13.2"
+lxml = "^5.1.0"
+xsdata = {extras = ["cli", "lxml", "soap"], version = "^24.1"}
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
