--- a/naat/pyproject.toml
+++ b/naat/pyproject.toml
@@ -45,6 +45,7 @@ tabulate = "^0.9.0"
 seaborn = "^0.13.2"
 lxml = "^5.1.0"
 xsdata = {extras = ["cli", "lxml", "soap"], version = "^24.1"}
+tqdm = "^4.66.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
