--- a/finetune-llm/pyproject.toml
+++ b/finetune-llm/pyproject.toml
@@ -29,7 +29,8 @@ tabulate = "^0.9.0"
 langchain = "^0.0.304"
 optimum = "^1.13.2"
 auto-gptq = "^0.4.2"
-llama-cpp-python = "^0.2.7"
+huggingface-hub = "^0.23.4"
+cmake = "^3.29.6"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
