--- a/sabin-center-climate-cases/pyproject.toml
+++ b/sabin-center-climate-cases/pyproject.toml
@@ -22,10 +22,11 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pandas = "^2.2.1"
+python = ">=3.8,<3.12"
 dbt-core = "^1.7.10"
 dbt-duckdb = "^1.7.3"
+jupysql = "^0.10.10"
+dbt-metricflow = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
