--- a/sabin-center-climate-cases/translate_sabin/dbt_project.yml
+++ b/sabin-center-climate-cases/translate_sabin/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -27,6 +26,9 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+# Re-running external models with an in-memory version of dbt-duckdb
+on-run-start:
+  - "{{ register_upstream_external_models() }}"
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
