--- a/finetune-llm/pyproject.toml
+++ b/finetune-llm/pyproject.toml
@@ -31,6 +31,8 @@ optimum = "^1.13.2"
 auto-gptq = "^0.4.2"
 huggingface-hub = "^0.23.4"
 cmake = "^3.29.6"
+openai = "^1.35.12"
+nltk = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
