--- a/eda-as-usual/pyproject.toml
+++ b/eda-as-usual/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.9,<3.12"
 pandas = "*"
 scikit-learn = "^1.3.0"
 scipy = "1.10.1"
@@ -30,6 +30,8 @@ ydata-profiling = "^4.3.1"
 # bamboolib = "^1.30.19"
 xgboost = "^1.7.6"
 openpyxl = "^3.1.2"
+pillow = "^11.3.0"
+pyexiftool = "^0.5.6"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
